task0001 footer overflow solved and task0003 edited

--- a/task0001/css/task0001-7css.css
+++ b/task0001/css/task0001-7css.css
@@ -10,13 +10,11 @@
 a{
 	text-decoration: none;
 	color: #fff;
-
 }
 body{
 	min-width: 980px;
 	background-color: #e2e2e2;
 	position: relative;
-	
 }
 ul{
 	list-style: none;
@@ -89,7 +87,6 @@ ul{
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b3ffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
 
 }
-branch1
 .index-intro h4{
 	text-align: right;
 	font-size: 14px;
@@ -711,6 +708,7 @@ footer{
 	font-size: 12px;
 	position: relative;
 	height: 350px;
+	overflow: hidden;
 }
 .footer-nav-wrap{
 	width: 360px;
