--- a/task0003/css/style.css
+++ b/task0003/css/style.css
@@ -25,6 +25,7 @@ header{
 	padding: 10px;
 	line-height: 30px;
 	color: #888;
+	min-width: 1200px;
 }
 h1{
 	font-size: 20px;
@@ -34,51 +35,47 @@ h1{
 	top: 50px;
 	bottom: 0;
 	width: 100%;
-
+	min-width: 1200px;
 }
 .type-wrap{
-	position: absolute;
-	left: 0;
+	float: left;
 	width: 300px;
 	height: 100%;
-	border-right: solid 1px #999;
+	border-right: solid 2px #efefef;
 	background-color: #f9f9f9;
 }
 .task-wrap{
-	position: absolute;
-	left: 300px;
+	float: left;
 	width: 300px;
-	border-right: solid 1px #999;
+	border-right: solid 2px #efefef;
 	background-color: #f9f9f9;
 	height: 100%;
 }
 .editor{
-	position: absolute;
-	left: 600px;
-	right: 0px;
+	float: left;
+	width: calc(100% - 600px);
 	background-color: #f9f9f9;
 	height: 100%;
+	min-width: 600px;
+	border: 1px red solid;
 }
-@media screen and (max-width: 450px){
-	.type-wrap{
-		position: relative;
-		left: 0;
-		margin: 0 auto;
-		width: 300px;
-		height: 400px;
-	}
-	.task-wrap{
-		position: relative;
-		left: 0;
-		margin: 0 auto;
-		width: 300px;
-		height: 400px;
-	}
-	.editor{
-		position: relative;
-		left: 0;
-		margin: 0 auto;
-		width: 450px;
-		height: 500px;
-	}
+.clearfix:after{
+	content: '';
+	display: table;
+	clear: both;
+}
+.status{
+	padding: 2px;
+	border-bottom: solid 2px #efefef;
+}
+.status ul li {
+	float: left;
+	width: 90px;
+	height: 30px;
+	border-radius: 10px;
+	border: 1px red solid;
+	text-align: center;
+	font-size: 16px;
+	line-height: 28px;
+	
 }
